# iplists

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  iplists-example.yaml  iplists.yaml
.github/workflows/: rust.yml
frontend/: index.html  package-lock.json  package.json  style.css  tailwind.config.js  tsconfig.json
frontend/src/: App.svelte  main.js
frontend/src/component/: ErrorAlert.svelte  Navbar.svelte
frontend/src/js/: api.ts  store.js  store.ts  types.ts
frontend/src/pages/: AsnDetail.svelte  Blocklist.svelte  Continents.svelte  Countries.svelte  LocationDetail.svelte
src/: config.rs  error.rs  main.rs
src/blocklist/: config.rs  fetch.rs  iptrie.rs  mod.rs  network.rs
src/forms/: blocklist.rs  extractors.rs  iplist.rs  mod.rs
src/handlers/: auth.rs  blocklist.rs  iplist.rs  mod.rs
src/iplist/: config.rs  fetch.rs  formatter.rs  iprange.rs  mod.rs  parse.rs
src/iptools/: iptrie.rs  mod.rs  network.rs
src/templates/: error.rs
static/css/: output.css
static/lists/: .gitignore  location.csv  sk.txt
